# Invoice-IQ

./: .gitignore  README.md
src/python/invoice_iq/: Makefile  README.md  pyproject.toml  requirements.txt
src/python/invoice_iq/dataset/training_docs/: invoice_0_charspace_1_customname.txt  invoice_10_charspace_11_customname.txt  invoice_10_color_B_254_customname.txt  invoice_11_charspace_12_customname.txt  invoice_11_color_B_253_customname.txt  invoice_12_charspace_13_customname.txt  invoice_12_color_B_243_customname.txt  invoice_13_charspace_14_customname.txt  invoice_14_charspace_15_customname.txt  invoice_14_color_B_248_customname.txt  invoice_15_charspace_16_customname.txt  invoice_15_color_B_241_customname.txt  invoice_16_charspace_17_customname.txt  invoice_17_charspace_18_customname.txt  invoice_17_color_B_242_customname.txt  invoice_19_charspace_20_customname.txt  invoice_19_color_B_250_customname.txt  invoice_1_color_B_246_customname.txt  invoice_20_color_B_254_customname.txt  invoice_21_charspace_22_customname.txt  invoice_21_color_B_245_customname.txt  (+179 more)
src/python/invoice_iq/docs/: mkdocs.yml
src/python/invoice_iq/invoice_iq/: __init__.py  config.py  dataset.py  features.py  invoice_app.py  jsonl_to_json.py  plots.py  utilities.py
src/python/invoice_iq/invoice_ui/: manage.py
src/python/invoice_iq/notebooks/: New_labelled_data.jsonl  jsonl_to_json.py  labeled_data.json  labeled_data.jsonl  labelled_data.jsonl  new_labelled_data.json  train_data.json  utilities.py
src/python/invoice_iq/references/: config.cfg  default_config.cfg  transformer.cfg
(+33 files in other folders)
