[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "invoice_iq"
version = "0.0.1"
description = "Invoice IQ project for invoice data recognition using ML"
authors = [
  { name = "Saurabh Chauhan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["invoice_iq"]
force_sort_within_sections = true
